[tool.poetry]
name = "saturn-chat"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "saturn"}]

# Example for pyproject.toml
[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
python-dotenv = "^1.0.1"

# pyautogen = { git = "https://github.com/mrrobot16/autogen.git", branch = "saturn-main", python = ">=3.8,<3.13" }
fastapi = "^0.110.3"
uvicorn = "^0.29.0"
httpx = "^0.27.0"
pytest = "^8.2.0"
flask = "^3.0.3"
flask-socketio = "^5.3.6"
pyautogen = "^0.2.27"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"